adds logistic regression

--- a/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
+++ b/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e2fc4cc",
+   "id": "00536f66",
    "metadata": {},
    "source": [
     "# About this implementation\n",
@@ -11,12 +11,12 @@
     "- Solver for fitting is the default 'lbfgs' solver\n",
     "- Used random states in the test/train split and also in the model solver\n",
     "\n",
-    "### **** note: typically, tune the penalty term, but not now. lets just work on getting something working."
+    "### **** note: typically, tune the penalty term, but not now. lets just work on getting something working. use lam=1.0 for now."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa205cf9",
+   "id": "fddc4686",
    "metadata": {},
    "source": [
     "### Step 1: import the dataset and prepare the data"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4db9e494",
+   "id": "f72ccdd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "04b93179",
+   "id": "70b04a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "24b1b4db",
+   "id": "a516802b",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e861ecde",
+   "id": "66a23e5f",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d41c86cf",
+   "id": "96de499b",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b9b7eb43",
+   "id": "77467ec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "380ad6aa",
+   "id": "6141169d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,14 +170,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b008edf6",
+   "id": "9760a366",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c5bdfade",
+   "id": "16297122",
    "metadata": {},
    "source": [
     "### Step 2: define the model, train the model\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "412ef98a",
+   "id": "56ef6d06",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "69fb14f1",
+   "id": "895d8aad",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2805a6df",
+   "id": "a8646cd2",
    "metadata": {},
    "source": [
     "### Step 3: make predictions on the test set and capture the error"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7fac7500",
+   "id": "788246dd",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9f4b4459",
+   "id": "449f6d75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1031780f",
+   "id": "5263cf14",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c10fe219",
+   "id": "bea1564a",
    "metadata": {},
    "source": [
     "## Evaluate the error"
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "70187da4",
+   "id": "1d598621",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "548f21b9",
+   "id": "131419de",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1bcac08f",
+   "id": "1b52266f",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "610ffb89",
+   "id": "171fa215",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68510794",
+   "id": "d9100c0b",
    "metadata": {},
    "outputs": [],
    "source": []
