--- a/models_classification/logistic_regression/logistic_regression_pytorch.ipynb
+++ b/models_classification/logistic_regression/logistic_regression_pytorch.ipynb
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f550ea6f",
+   "id": "96d623b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "0d17886e",
+   "id": "963bffb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d72af2a",
+   "id": "8f94e59f",
    "metadata": {},
    "source": [
     "## Step 3: Loop for train the model"
@@ -198,18 +198,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc5435ad",
+   "id": "d380f52d",
    "metadata": {},
    "source": [
-    "$$ \\ell = - \\sum_{i=1}^{n} y_i \\; log y_i + (1-y_i)log(1-y_i) $$\n",
-    "\n",
-    "We use _reduction='sum'_ because in our derivation we add left and right sides for NLL"
+    "$$ \\ell = - \\sum_{i=1}^{n} y_i \\; log y_i + (1-y_i)log(1-y_i) $$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "f45e0c09",
+   "id": "aa9cd52d",
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +250,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "3a0fe025",
+   "execution_count": 105,
+   "id": "5f226e69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,13 +259,18 @@
     "\n",
     "# Loss and solver\n",
     "criterion = nn.BCELoss()\n",
-    "optimizer = torch.optim.SGD(model.parameters(), lr=0.001)"
+    "\n",
+    "# optimizer = torch.optim.SGD(model.parameters(), lr=0.001) # try a diff one w regularization\n",
+    "\n",
+    "# adam optimizer is a type of l2 regulizer, uses 'weight decay' and 'dropout'\n",
+    "# which method is popular for neural network architectures\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-5)  # Adjust weight_decay as needed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "e546a38a",
+   "execution_count": 106,
+   "id": "e399e3c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,34 +283,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "4110b5c8",
+   "execution_count": 107,
+   "id": "f0a2bbb8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Loss: 0.5371\n",
-      "Epoch [20/100], Loss: 0.5271\n",
-      "Epoch [30/100], Loss: 0.5175\n",
-      "Epoch [40/100], Loss: 0.5084\n",
-      "Epoch [50/100], Loss: 0.4997\n",
-      "Epoch [60/100], Loss: 0.4914\n",
-      "Epoch [70/100], Loss: 0.4835\n",
-      "Epoch [80/100], Loss: 0.4759\n",
-      "Epoch [90/100], Loss: 0.4687\n",
-      "Epoch [100/100], Loss: 0.4618\n",
+      "Epoch [10/100], Loss: 0.6351\n",
+      "Epoch [20/100], Loss: 0.5786\n",
+      "Epoch [30/100], Loss: 0.5302\n",
+      "Epoch [40/100], Loss: 0.4891\n",
+      "Epoch [50/100], Loss: 0.4541\n",
+      "Epoch [60/100], Loss: 0.4243\n",
+      "Epoch [70/100], Loss: 0.3986\n",
+      "Epoch [80/100], Loss: 0.3762\n",
+      "Epoch [90/100], Loss: 0.3567\n",
+      "Epoch [100/100], Loss: 0.3394\n",
       "\n",
       " Model params:\n",
       "\t Weights: Parameter containing:\n",
-      "tensor([[-0.0536, -0.0325, -0.0544, -0.0514, -0.0269, -0.0415, -0.0490, -0.0572,\n",
-      "         -0.0246,  0.0038, -0.0388,  0.0009, -0.0376, -0.0368,  0.0054, -0.0152,\n",
-      "         -0.0125, -0.0257,  0.0012,  0.0005, -0.0575, -0.0370, -0.0578, -0.0537,\n",
-      "         -0.0327, -0.0428, -0.0474, -0.0586, -0.0338, -0.0222]],\n",
+      "tensor([[-0.0833, -0.0855, -0.0830, -0.0830, -0.0802, -0.0784, -0.0803, -0.0823,\n",
+      "         -0.0784,  0.1137, -0.0823,  0.0136, -0.0813, -0.0817,  0.0766, -0.0633,\n",
+      "         -0.0573, -0.0755,  0.0833,  0.0710, -0.0835, -0.0860, -0.0831, -0.0831,\n",
+      "         -0.0837, -0.0798, -0.0803, -0.0822, -0.0840, -0.0771]],\n",
       "       requires_grad=True)\n",
       "\t Bias: Parameter containing:\n",
-      "tensor([0.0247], requires_grad=True)\n"
+      "tensor([0.0946], requires_grad=True)\n"
      ]
     }
    ],
@@ -341,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdff6e3d",
+   "id": "2a0bed22",
    "metadata": {},
    "source": [
     "## Step 4: Test"
@@ -349,8 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "9e0aca09",
+   "execution_count": 108,
+   "id": "054b1f3e",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +364,7 @@
        ")"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,8 +376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "1881b64d",
+   "execution_count": 109,
+   "id": "791b6aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a756e934",
+   "id": "9b6f918b",
    "metadata": {},
    "source": [
     "## Step 5: Evaluate the model"
@@ -394,32 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "8ad7daba",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'np'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/c7/k2fcvfxj5610zmlmq4sn39z00000gn/T/ipykernel_76908/2400932568.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# convert to numpy for charting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'np'"
-     ]
-    }
-   ],
-   "source": [
-    "# convert to numpy for charting\n",
-    "y_pred = y_pred.np()\n",
-    "y_test = y_test.np()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "71a9c641",
+   "execution_count": 110,
+   "id": "956d1d6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,8 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "3182e82b",
+   "execution_count": 111,
+   "id": "3c079975",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0903bf77",
+   "id": "eba27328",
    "metadata": {},
    "outputs": [],
    "source": []
