--- a/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
+++ b/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f72ccdd9",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "70b04a3e",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "a516802b",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "       'worst symmetry', 'worst fractal dimension'], dtype='<U23')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "66a23e5f",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "96de499b",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "array(['malignant', 'benign'], dtype='<U9')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "77467ec6",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "6141169d",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "56ef6d06",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "LogisticRegression(random_state=42, verbose=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "895d8aad",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
        "         0.00520705, -0.94571375, -0.77343621, -1.20853126, -0.1541604 ]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,6 +286,41 @@
    "source": [
     "# investigate the fit ... these are the thetas\n",
     "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9677e03d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1.0,\n",
+       " 'class_weight': None,\n",
+       " 'dual': False,\n",
+       " 'fit_intercept': True,\n",
+       " 'intercept_scaling': 1,\n",
+       " 'l1_ratio': None,\n",
+       " 'max_iter': 100,\n",
+       " 'multi_class': 'auto',\n",
+       " 'n_jobs': None,\n",
+       " 'penalty': 'l2',\n",
+       " 'random_state': 42,\n",
+       " 'solver': 'lbfgs',\n",
+       " 'tol': 0.0001,\n",
+       " 'verbose': 1,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_params()"
    ]
   },
   {
