adds results at top of file

--- a/models_classification/logistic_regression/logistic_regression_pytorch.ipynb
+++ b/models_classification/logistic_regression/logistic_regression_pytorch.ipynb
@@ -8,7 +8,14 @@
     "# About this implementation\n",
     "\n",
     "\n",
-    "Might make most sense to continue to use sklearn for the test/train split because i dont know how it applies the random state if there is a difference in pytorch, and I want to compare my results between implementations\n"
+    "Might make most sense to continue to use sklearn for the test/train split because i dont know how it applies the random state if there is a difference in pytorch, and I want to compare my results between implementations.\n",
+    "\n",
+    "### Results\n",
+    "F1 Score (y=0) 0.95\n",
+    "\n",
+    "F1 Score (y=1) 0.97\n",
+    "\n",
+    "Currently using the Adam Optimizer with weight decay 1e-5 (solver provides l2 penalty)\n"
    ]
   },
   {
@@ -122,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "96d623b3",
+   "id": "374937a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "963bffb3",
+   "id": "cd116c82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f94e59f",
+   "id": "8b13e9b5",
    "metadata": {},
    "source": [
     "## Step 3: Loop for train the model"
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d380f52d",
+   "id": "8e002b51",
    "metadata": {},
    "source": [
     "$$ \\ell = - \\sum_{i=1}^{n} y_i \\; log y_i + (1-y_i)log(1-y_i) $$\n"
@@ -207,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "aa9cd52d",
+   "id": "9e77ab0e",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "5f226e69",
+   "id": "c86e9324",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,22 +276,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "e399e3c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_accuracy(y, y_hat):\n",
-    "    predicted_labels = torch.where((y_hat > 0.5), 1, 0).view(-1)\n",
-    "    accuracy = torch.sum(predicted_labels == y.view(-1)).float() / y.size(0)\n",
-    "    \n",
-    "    return accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 107,
-   "id": "f0a2bbb8",
+   "id": "31264cb4",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0bed22",
+   "id": "fe516da4",
    "metadata": {},
    "source": [
     "## Step 4: Test"
@@ -353,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "054b1f3e",
+   "id": "48970fe0",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "791b6aca",
+   "id": "9e020ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b6f918b",
+   "id": "ed05b2e0",
    "metadata": {},
    "source": [
     "## Step 5: Evaluate the model"
@@ -398,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "956d1d6f",
+   "id": "02a919b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "3c079975",
+   "id": "3fe70e0b",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eba27328",
+   "id": "0ff3f7b0",
    "metadata": {},
    "outputs": [],
    "source": []
