--- a/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
+++ b/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
@@ -11,7 +11,14 @@
     "- Solver for fitting is the default 'lbfgs' solver\n",
     "- Used random states in the test/train split and also in the model solver\n",
     "\n",
-    "### **** note: typically, tune the penalty term, but not now. lets just work on getting something working. use lam=1.0 for now."
+    "** Note: typically, tune the penalty term in general, but I didn't fonow.**\n",
+    "\n",
+    "### Results\n",
+    "F1 Score (y=0) 0.96\n",
+    "\n",
+    "F1 Score (y=1) 0.98\n",
+    "\n",
+    "Currently using the L2 penalty with C=lam=1.0"
    ]
   },
   {
@@ -291,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9677e03d",
+   "id": "7f123087",
    "metadata": {},
    "outputs": [
     {
