--- a/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
+++ b/models_classification/logistic_regression/logistic_regression_sklearn.ipynb
@@ -11,7 +11,7 @@
     "- Solver for fitting is the default 'lbfgs' solver\n",
     "- Used random states in the test/train split and also in the model solver\n",
     "\n",
-    "** Note: typically, tune the penalty term in general, but I didn't fonow.**\n",
+    "** Note: typically, tune the penalty term in general, but I didn't for now.**\n",
     "\n",
     "### Results\n",
     "F1 Score (y=0) 0.96\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7f123087",
+   "id": "8d584e47",
    "metadata": {},
    "outputs": [
     {
